--- a/static-web/cfn.yaml
+++ b/static-web/cfn.yaml
@@ -1,52 +1,53 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: |
-  This is my cfn template for EC2 with security group
-  
+  hello
 Resources:
-
-  MyWebServer:
-    Type: AWS::EC2::Instance
-    Properties:
-      ImageId: ami-01c647eace872fc02 
-      InstanceType: t2.micro
-      KeyName: firstkey
-      SecurityGroupIds: 
-        - !Ref MySecGrp
-      Tags: 
-        - Key: Name
-          Value: !Sub Emre ${AWS::StackName}
-      UserData: 
-        Fn::Base64: |
-            #! /bin/bash
-            yum update -y
-            yum install httpd -y
-            FOLDER="https://github.com/Emrkts/101-kittens-carousel-static-website-ec2/blob/main/static-web"
-            cd /var/www/html
-            wget ${FOLDER}/index.html
-            wget ${FOLDER}/cat0.jpg
-            wget ${FOLDER}/cat1.jpg
-            wget ${FOLDER}/cat2.jpg
-            wget ${FOLDER}/cat3.png
-            systemctl start httpd
-            systemctl enable httpd
-
-  MySecGrp:
+  mySecGrp:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: ssh-http # Required
-      GroupName: emresecportfolio
+      GroupDescription: SHH and Http # Required
+      GroupName: emreportfolio
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 22
+          FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
-      Tags: 
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+      Tags:
         - Key: env
           Value: dev
 
+  myWebServer:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId: ami-01c647eace872fc02
+      InstanceType: t2.micro
+      KeyName: firstkey
+      SecurityGroupIds:
+        - !Ref mySecGrp
+      Tags:
+        - Key: Name
+          Value: !Sub Emre ${AWS::StackName}
+      UserData:
+        Fn::Base64: |
+          #! /bin/bash
+          yum update -y
+          yum install httpd -y
+          FOLDER="https://raw.githubusercontent.com/Emrkts/101-kittens-carousel-static-website-ec2/main/static-web"
+          cd /var/www/html
+          wget ${FOLDER}/index.html
+          wget ${FOLDER}/cat0.jpg
+          wget ${FOLDER}/cat1.jpg
+          wget ${FOLDER}/cat2.jpg
+          wget ${FOLDER}/cat3.png
+          systemctl start httpd
+          systemctl enable httpd
 Outputs:
-  WebSiteURL:
-    Description: This output gives the URL of EC2
-    Value: !Sub 
+  WebsiteURL:
+    Value: !Sub
       - http://${PublicAddress}
-      - PublicAddress: !GetAtt MyWebServer.PublicDnsName
+      - PublicAddress: !GetAtt myWebServer.PublicDnsName
+    Description: Kittens Carousel Application URL
